# ubuntu_configure

./: .gitignore  README.md  vcpkg安装及导出.txt  参考库.txt
assist/: ubuntu打包说明
assist/c++/CMakeLists-vcpkg/: CMakeLists.txt
assist/c++/CMakeLists-vcpkg/tests/: CMakeLists.txt
assist/c++/im_export_macro/: CMakeLists.txt
assist/c++/im_export_macro/include/tools/: example_class.h  tools.h
assist/c++/im_export_macro/src/: example_class.cpp
assist/python/: .settings.json  @AutomationLog.txt  README.md  __init__.py  add_path.py  check_file_encode.py  config.json  config.py  convert_files_encoding.py  credit_limit.xlsx  except_tools.py  file_content_operate.py  fold_operate.py  grouped_stock.xlsx  installed_packages.txt  listen失败解决方法.txt  location_section_handleMap.py  mid_result-split_block.py  price_calculator_recursive.xlsx  replace_files_str.py  replace_folders_files.py  requirements-1.txt  requirements.txt  sec_info_tab.py  setup.py  similarity.py  str_tools.py  test.xlsx  testOptionalParams.py  test_char_code.py  test_group.xlsx  url.json  创建本地环境.txt  推荐用卡.xlsx  获取所有pip安装的包.bat  评论.csv
assist/python/12306/: 12306.json  12306_map.py  12306_test.py  city.json  org.xlsx  rest.py  station_config.py  station_dist.py  station_routine.py  stations.xlsx  test_12306.py  test_pinyin.py  ticket_price.py  ticket_rest.py  ticket_routine.py  ticket_url.py  train_route_info.py  train_route_visualizer.py  train_station.py  url_history.py
assist/python/HmTask/: __init___.py  base_task.py  download_pic.py  handle_comment.py  org_red_book.js  red.js  redbook_algorithm.py  redbook_comment.py  redbook_frame.py  redbook_referece.py  redbook_threads copy.py  redbook_threads.py  redbook_threads_comments.py  redbook_threads_copy1.py  redbook_threads_urls.py  redbook_tools copy.py  redbook_tools.py  test_async.py  test_event.py  test_redbook.py  test_redbook_copy.py  test_task.py  tools.py  webpage_tools.py  数据流图.drawio  绘制词云图.py
assist/python/Wechat/: auto_back.py  wechat_auto.py  回复数据.xlsx
assist/python/assist/: args_example.py  aria2.conf  git_url.py  git_url.txt  replace_params copy 2.json  replace_params.json  replace_params_animal.json  replace_params_project_files.json  replace_params_project_files_eigen.json  replace_params_rename.json
assist/python/audio_tools/: audio_srt.py  gmm_split.py  silence_split.py  spectral_split.py
assist/python/base/: __init__.py  add_sys_path.py  aria2_tools.py  cad_unity.py  check_file_encode.py  chinese_tools.py  clipboard.py  codec_tools.py  collect_tools.py  com_decorator.py  com_exe_path.py  com_log.py  com_status.py  convert_files_encoding.py  cookies_tools.py  coroutine_tools.py  credit_detail.py  cur_to_code.py  custom_log.py  decorator.py  df_tools.py  dyn_decorator.py  encode_tools.py  except_tools.py  fetch_tools.py  file_content_operate.py  file_manager.py  file_tools.py  finder.py  fold_tools.py  format_tool.py  formula_calculator.py  generate_key.py  hold_on.py  html_tools.py  image_tools.py  log_info.py  loops_tools.py  math_tools.py  month_pay_rate.py  (+24 more)
assist/python/cad/: .toml  (+15 more)
assist/vba/: 修改word标题.vbs
cmake/: ConfigIncludeGlobally.cmake  ds-source-group.cmake  protobuf-generate-component.cmake  vcpkg-config.cmake
joy_project/: CMakeLists.txt  README.md  installed_packages.txt
joy_project/cmake/: coverage.cmake  ds-copy-file.cmake  ds-get-git-info.cmake  monitor.cmake  sanitizer.cmake
joy_project/src/: CMakeLists.txt
joy_project/src/common_header/: CMakeLists.txt
joy_project/src/common_header/include/common_header/: cereal_macro.h
joy_project/src/common_header/src/macro/: cereal_macro.cpp
joy_project/src/joy_utility/: CMakeLists.txt
joy_project/src/joy_utility/include/joy_utility/: joy_utility_macro.h
joy_project/src/joy_utility/include/joy_utility/interface/: bin_archive.h  data_node_base.h  json_archive.h  serialize_interface.h  xml_archive.h
joy_project/src/joy_utility/include/joy_utility/kenels/: harchive.h  hobject.h
joy_project/src/joy_utility/include/joy_utility/tools/: import_export_tools.h  logger.h  string_tools.h  template_utility.h  xml_tools.h
joy_project/src/joy_utility/src/interface/: bin_archive.cpp  data_node_base.cpp  json_archive.cpp  serialize_interface.cpp  xml_archive.cpp
joy_project/src/joy_utility/src/kenels/: harchive.cpp  hobject.cpp
joy_project/src/joy_utility/src/tools/: import_export_tools.cpp  logger.cpp  string_tools.cpp  template_utility.cpp  xml_tools.cpp
joy_project/src/utilities/: CMakeLists.txt
joy_project/src/utilities/include/utilities/: cereal_macro.h  cereal_utility.h  cereal_wrapper.h  member_func_macro.h  utilities_macro.h
joy_project/src/utilities/include/utilities/utility/: file_utility.h
joy_project/src/utilities/src/macro/: cereal_macro.cpp
joy_project/src/utilities/src/utility/: file_utility.cpp
joy_project/test/: CMakelists.txt
joy_project/test/data/joy_utility/: test_serialize.json  test_serialize.xml
joy_project/test/src/: CMakeLists.txt
joy_project/test/src/data/: CMakeLists.txt
joy_project/test/src/data/include/data/: animal.h  data_macro.h  plant.h  student.h
joy_project/test/src/data/src/data/: animal.cpp  plant.cpp  student.cpp
joy_project/test/src/handle_data/: CMakeLists.txt
joy_project/test/src/handle_data/include/handle_data/: handle_data_macro.h
joy_project/test/src/handle_data/include/handle_data/serialize/: animal_cereal.h  cereal_student.h  plant_cereal.h  student_cereal.h
joy_project/test/src/handle_data/src/serialize/: cereal_student.cpp
joy_project/test/test/: CMakelists.txt  environment.cpp  environment.hxx  test.cpp
joy_project/test/test/data/joy_utility/: student.json  student_1.json  student_v1.json  test_serialize.json  test_serialize.xml
joy_project/test/test/test_cerel/: animal.h  animal_cereal.h  cereal_triple.h  test_animal_cereal.cpp  test_cereal.cpp  test_cereal_temp.cpp  test_plant_cereal.cpp  test_student_cereal.cpp
joy_project/test/test/test_joy_utility/: test_serialize.cpp  test_string.cpp
joy_project/test/test_joy_utility/: test_serialize.cpp
tools/: vscode扩展.txt
创建容器/: 创建容器.txt
(+353 files in other folders)
